--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,19 +8,25 @@ edition = "2018"
 
 [features]
 default = ["bin"]
-bin = ["clap", "slog-async", "slog-term"] # Build binaries
+bin = ["anyhow", "clap", "num_cpus", "slog-async", "slog-envlogger", "slog-term", "tokio/rt"] # Build binaries
 
 [[bin]]
 name = "deqp-runner"
 required-features = ["bin"]
 
 [dependencies]
+anyhow = { version = "1", optional = true }
 clap = { version = "3.0.0-beta.2", optional = true }
+csv = "1.1"
 futures = "0.3"
-serde = "1"
+num_cpus = { version = "1", optional = true }
+once_cell = "1"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 slog = { version = "2", features = ["max_level_trace", "release_max_level_debug"] }
 slog-async = { version = "2", optional = true }
+slog-envlogger = { version = "2", optional = true }
 slog-term = { version = "2", optional = true }
 thiserror = "1"
-time = "0.2"
-tokio = { version = "0.3", features = ["io-util", "macros", "process", "rt", "stream", "sync"] }
+time = { version = "0.2", features = ["serde"] }
+tokio = { version = "0.3", features = ["fs", "io-util", "macros", "process", "stream", "sync"] }
