--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,12 +21,14 @@ csv = "1.1"
 futures = "0.3"
 num_cpus = { version = "1", optional = true }
 once_cell = "1"
+rand = "0.7"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 slog = { version = "2", features = ["max_level_trace", "release_max_level_debug"] }
 slog-async = { version = "2", optional = true }
 slog-envlogger = { version = "2", optional = true }
 slog-term = { version = "2", optional = true }
+tempfile = "3"
 thiserror = "1"
 time = { version = "0.2", features = ["serde"] }
-tokio = { version = "0.3", features = ["fs", "io-util", "macros", "process", "stream", "sync"] }
+tokio = { version = "0.3", features = ["fs", "io-util", "macros", "process", "stream", "sync", "time"] }
