--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ anyhow = { version = "1", optional = true }
 clap = { version = "3.0.0-beta.2", optional = true }
 csv = "1.1"
 futures = "0.3"
+genawaiter = { version = "0.99", features = ["futures03"] }
 num_cpus = { version = "1", optional = true }
 once_cell = "1"
 rand = "0.7"
