--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ once_cell = "1"
 rand = "0.7"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+junit-report = "0.4"
 slog = { version = "2", features = ["max_level_trace", "release_max_level_debug"] }
 slog-async = { version = "2", optional = true }
 slog-envlogger = { version = "2", optional = true }
