--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -24,7 +24,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ["ubuntu-20.04", "macos-11.0", "windows-2019"]
+        os: ["ubuntu-20.04"]
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
