--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,24 +17,24 @@ required-features = ["bin"]
 
 [dependencies]
 anyhow = { version = "1", optional = true }
-clap = { version = "3.0.0-beta.2", optional = true }
+clap = { version = "=3.0.0-beta.5", optional = true }
 csv = "1.1"
 futures = "0.3"
 genawaiter = { version = "0.99", features = ["futures03"] }
-indicatif = "0.15"
+indicatif = "0.16"
 num_cpus = { version = "1", optional = true }
 once_cell = "1"
-rand = "0.7"
+rand = "0.8"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-junit-report = "0.4"
+junit-report = "0.6"
 slog = { version = "2", features = ["max_level_trace", "release_max_level_debug"] }
 slog-async = { version = "2", optional = true }
 slog-envlogger = { version = "2", optional = true }
 slog-term = { version = "2", optional = true }
 tempfile = "3"
 thiserror = "1"
-time = { version = "0.2", features = ["serde"] }
+time = { version = "0.3", features = ["serde"] }
 tokio = { version = "0.3", features = ["fs", "io-util", "macros", "process", "stream", "sync", "time"] }
 
 [dev-dependencies]
