--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ required-features = ["bin"]
 
 [dependencies]
 anyhow = { version = "1", optional = true }
-clap = { version = "=3.0.0-beta.5", optional = true }
+clap = { version = "3", features = ["cargo", "derive"], optional = true }
 csv = "1.1"
 futures = "0.3"
 genawaiter = { version = "0.99", features = ["futures03"] }
@@ -27,7 +27,7 @@ once_cell = "1"
 rand = "0.8"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-junit-report = "0.6"
+junit-report = "0.7"
 slog = { version = "2", features = ["max_level_trace", "release_max_level_debug"] }
 slog-async = { version = "2", optional = true }
 slog-envlogger = { version = "2", optional = true }
@@ -35,7 +35,8 @@ slog-term = { version = "2", optional = true }
 tempfile = "3"
 thiserror = "1"
 time = { version = "0.3", features = ["serde"] }
-tokio = { version = "0.3", features = ["fs", "io-util", "macros", "process", "stream", "sync", "time"] }
+tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "sync", "time"] }
+tokio-stream = "0.1"
 
 [dev-dependencies]
 anyhow = "1"
